--- a/Assignment_CSS/style.css
+++ b/Assignment_CSS/style.css
@@ -1,55 +1,212 @@
-h1{
-    color: red;
+.row-direction {
+    flex-direction: row;
+    gap: 10px;
+    display: flex;
 }
 
-h2{
-    font-style: italic;
+
+.column-direction {
+    flex-direction: column;
+    display: flex;
+}
+
+.txt1 {
     color: green;
+    display: flex;
 }
 
-.line{
-    text-decoration: line-through;
-}
-
-.highlight{
-    background-color: yellow;
-    display: inline;
+.supperMain {
+    border: 1px solid black;
+    height: 315px;
+    width: 500px;
+    background-color:lightgoldenrodyellow;
 
 }
 
-.otchnge{
-    font-style: italic;
-    text-decoration: underline;
+.main1 {
+    justify-content: flex-start;
+    display: flex;
+    gap: 10px;
+
 }
 
-.spacing{
-    letter-spacing:5px;
-    color:blueviolet
-}
-
-.threelist{
-    background-color: yellow;
-    display: inline;
+.start {
+    width: 50px;
+    height: 50px;
+    background: coral;
+    color: white;
+    align-items: center;
+    justify-content: center;
     font-weight: bold;
+    display: flex;
+
 }
 
-.pchange{
-    color:brown;
-    font-size: 18px;
+.main2 {
+    justify-content: flex-end;
+    display: flex;
+    gap: 10px;
 }
 
-.p2change{
-    color: blue;
-    font-size: 10px;;
+.end {
+    width: 50px;
+    height: 50px;
+    background: coral;
+    color: white;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    display: flex;
 }
 
-.stylechange{
-    font-size: 16px;
-    color: orangered;
-    font-style: italic;
+.main3 {
+    justify-content: center;
+    display: flex;
+    gap: 10px;
 }
 
-a{
-    display: inline;
-    background-color: palevioletred;
+.center {
+    width: 50px;
+    height: 50px;
+    background: coral;
+    color: white;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    display: flex;
+}
+
+.main4 {
+    justify-content: space-between;
+    display: flex;
+}
+
+.between {
+    width: 50px;
+    height: 50px;
+    background: coral;
+    color: white;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    display: flex;
+}
+
+.main5 {
+    justify-content: space-around;
+    display: flex;
+
+}
+
+.around {
+    width: 50px;
+    height: 50px;
+    background: coral;
+    color: white;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    display: flex;
+}
+
+.main6 {
+    justify-content: space-evenly;
+    display: flex;
+}
+
+.evenly {
+    width: 50px;
+    height: 50px;
+    background: coral;
+    color: white;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    display: flex;
+    margin-top: 8px;
+}
+
+.outer{
+       position: relative;
+        width: 300px;
+        height: 120px;
+        background: lavenderblush;
+        border: 2px solid red;
+}
+      
+.relative-box {
+        position: relative;
+        top: 10px;
+        left:10px;
+        background: skyblue;
+        padding: 10px;
+        width:100px;
+}
+
+.absolute-box {
+    position: absolute;
+    top: 30px;
+    left: 100px;
+    background: yellowgreen;
+    padding: 10px;
+    width:130px;
+}
+
+.container{
+    position: absolute;
+    border: 3px solid black;
+    height:210px;
+    width: 400px;
+    margin-left: 120px;
+    margin-top: 14px;    
+}
+
+.box{
+    
+    position: absolute;
+    border-radius: 20px;
+    height:100px;
+    width: 180px; 
+    text-align: center;
+    padding-top: 3px;
+    
+}
+
+.purple-box{
+    
+    background-color: plum;
+    z-index: 1;
+    left:30px;
+    top: 30px;  
+    
+}
+
+.yellow-box{
+    left: 60px;
+    background-color: yellow;
+    top: 60px;
+    z-index: 2;
+
+}
+
+.red-box{
+    left:90px;
+    background-color: peru;
+    top: 90px; 
+    z-index: 3;
+
+}
+
+.main{
+    background-color: lightgoldenrodyellow;
+    padding: 20px;
+    
+}
+
+.both{
+    background-color: lightblue;
+    padding: 30px;  
+    margin: 20px; 
+    border: 2px solid blue;
+    font-weight: bold;
 }
