--- a/Assignment_CSS/style.css
+++ b/Assignment_CSS/style.css
@@ -1,212 +1,102 @@
-.row-direction {
-    flex-direction: row;
-    gap: 10px;
-    display: flex;
-}
-
-
-.column-direction {
-    flex-direction: column;
-    display: flex;
-}
-
-.txt1 {
-    color: green;
-    display: flex;
-}
-
-.supperMain {
-    border: 1px solid black;
-    height: 315px;
-    width: 500px;
-    background-color:lightgoldenrodyellow;
-
-}
-
-.main1 {
-    justify-content: flex-start;
-    display: flex;
-    gap: 10px;
-
-}
-
-.start {
-    width: 50px;
-    height: 50px;
-    background: coral;
-    color: white;
-    align-items: center;
-    justify-content: center;
-    font-weight: bold;
-    display: flex;
-
-}
-
-.main2 {
-    justify-content: flex-end;
-    display: flex;
-    gap: 10px;
-}
-
-.end {
-    width: 50px;
-    height: 50px;
-    background: coral;
-    color: white;
-    align-items: center;
-    justify-content: center;
-    font-weight: bold;
-    display: flex;
-}
-
-.main3 {
-    justify-content: center;
-    display: flex;
-    gap: 10px;
-}
-
-.center {
-    width: 50px;
-    height: 50px;
-    background: coral;
-    color: white;
-    align-items: center;
-    justify-content: center;
-    font-weight: bold;
-    display: flex;
-}
-
-.main4 {
-    justify-content: space-between;
-    display: flex;
-}
-
-.between {
-    width: 50px;
-    height: 50px;
-    background: coral;
-    color: white;
-    align-items: center;
-    justify-content: center;
-    font-weight: bold;
-    display: flex;
-}
-
-.main5 {
-    justify-content: space-around;
-    display: flex;
-
-}
-
-.around {
-    width: 50px;
-    height: 50px;
-    background: coral;
-    color: white;
-    align-items: center;
-    justify-content: center;
-    font-weight: bold;
-    display: flex;
-}
-
-.main6 {
-    justify-content: space-evenly;
-    display: flex;
-}
-
-.evenly {
-    width: 50px;
-    height: 50px;
-    background: coral;
-    color: white;
-    align-items: center;
-    justify-content: center;
-    font-weight: bold;
-    display: flex;
-    margin-top: 8px;
-}
-
-.outer{
-       position: relative;
-        width: 300px;
-        height: 120px;
-        background: lavenderblush;
-        border: 2px solid red;
-}
-      
-.relative-box {
-        position: relative;
-        top: 10px;
-        left:10px;
-        background: skyblue;
-        padding: 10px;
-        width:100px;
-}
-
-.absolute-box {
-    position: absolute;
-    top: 30px;
-    left: 100px;
-    background: yellowgreen;
-    padding: 10px;
-    width:130px;
-}
-
-.container{
-    position: absolute;
-    border: 3px solid black;
-    height:210px;
-    width: 400px;
-    margin-left: 120px;
-    margin-top: 14px;    
-}
-
-.box{
-    
-    position: absolute;
-    border-radius: 20px;
-    height:100px;
-    width: 180px; 
-    text-align: center;
-    padding-top: 3px;
-    
-}
-
-.purple-box{
-    
-    background-color: plum;
-    z-index: 1;
-    left:30px;
-    top: 30px;  
-    
-}
-
-.yellow-box{
-    left: 60px;
-    background-color: yellow;
-    top: 60px;
-    z-index: 2;
-
-}
-
-.red-box{
-    left:90px;
-    background-color: peru;
-    top: 90px; 
-    z-index: 3;
-
-}
-
-.main{
-    background-color: lightgoldenrodyellow;
+/* Default behavior (content-box) */
+.content-box {
+    width: 200px;
+    height: 100px;
     padding: 20px;
-    
+    border: 5px solid black;
+    background-color: lightblue;
+    font-size: 18px;
+    color: black;
+    box-sizing: content-box;
 }
 
-.both{
+/* Adjusted sizing */
+.border-box {
+    width: 200px;
+    height: 100px;
+    padding: 20px;
+    border: 5px solid black;
     background-color: lightblue;
-    padding: 30px;  
-    margin: 20px; 
-    border: 2px solid blue;
-    font-weight: bold;
+    font-size: 18px;
+    color: black;
+    box-sizing: border-box;
+    background-color: lightgreen;
+}
+
+.box {
+    width: 100px;
+    height: 100px;
+    background: red;
+    animation-name: payal;
+    animation-duration: 2s;
+    animation-delay: 1s;
+    cursor: pointer;
+}
+
+@keyframes payal {
+    20% {
+        background-color: lightpink;
+        margin-left: 100px;
+    }
+
+    40% {
+        background-color: blue;
+    }
+
+    60% {
+        background-color: lawngreen;
+    }
+
+    80% {
+        background-color: orange;
+    }
+
+    100% {
+        background-color: lightseagreen;
+    }
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 50px 50px;
+    gap: 5px;
+    width: 200px;
+
+}
+
+.box1 {
+    background: blueviolet;
+    grid-row: 1 / 3;
+    /* Merge row 1 and 2 */
+}
+
+.box2 {
+    background: lightgreen;
+}
+
+.box3 {
+    background: orangered;
+}
+
+.grid-container1 {
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 10px;
+    width:300px
+}
+
+.merged {
+    background-color: lightblue;
+    grid-column: 1 / 3;
+    /* Merge columns 1 and 2 */
+}
+
+.box4 {
+    background-color: lightgreen;
+}
+
+b{
+    text-decoration: underline;
+    font-size: 18px;
 }
