--- a/Assignment_CSS/style7.css
+++ b/Assignment_CSS/style7.css
@@ -17,6 +17,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .nav-links {
@@ -44,7 +45,6 @@ a{
 .main-box1{
     display: flex;
     align-items: center;
-    
     margin-top:20px;
 }
 
@@ -131,19 +131,37 @@ button{
     padding: 5px;
     position: relative;
 }
-
-@media (min-width:320px) and (max-width:480px) {
-    .body{
+@media  screen and (max-width: 768px) {
+    .main-box1 {
         flex-direction: column;
-        
-      
+        align-items: flex-start;
     }
-    
+
+    .main-box2 {
+        grid-template-columns: 1fr;
+        justify-items: center;
+    }
+
+    .box-1,
+    .box-2,
+    .box-3,
+    .box-4 {
+        width: 100%; /* Make them flexible to screen */
+        max-width: 300px;
+    }
+
+    .nav {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .nav-links {
+        flex-direction: column;
+        gap: 10px;
+        margin-top: 10px;
+    }
 }
 
-@media (min-width:481px) and (max-width:768px) {
-    .body{
-        flex-direction: column;
-    }
-    
-}
+
+   
+   
