--- a/Assignment_CSS/style.css
+++ b/Assignment_CSS/style.css
@@ -1,102 +1,95 @@
-/* Default behavior (content-box) */
-.content-box {
-    width: 200px;
-    height: 100px;
-    padding: 20px;
-    border: 5px solid black;
-    background-color: lightblue;
-    font-size: 18px;
-    color: black;
-    box-sizing: content-box;
+h1 {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bolder;
+    margin-left: 150px;
+    margin-bottom: -26px;
 }
 
-/* Adjusted sizing */
-.border-box {
-    width: 200px;
-    height: 100px;
-    padding: 20px;
-    border: 5px solid black;
-    background-color: lightblue;
-    font-size: 18px;
-    color: black;
-    box-sizing: border-box;
-    background-color: lightgreen;
+span{
+    color: #00BFFF;
 }
 
-.box {
-    width: 100px;
-    height: 100px;
-    background: red;
-    animation-name: payal;
-    animation-duration: 2s;
-    animation-delay: 1s;
-    cursor: pointer;
+.task-box {
+    height: 600px;
+    margin: 60px;
+    background-color: rgb(248, 246, 246);
+    
 }
 
-@keyframes payal {
-    20% {
-        background-color: lightpink;
-        margin-left: 100px;
-    }
 
-    40% {
-        background-color: blue;
-    }
 
-    60% {
-        background-color: lawngreen;
-    }
-
-    80% {
-        background-color: orange;
-    }
-
-    100% {
-        background-color: lightseagreen;
-    }
+.add-button{
+    justify-content: end;
+    font-size: 20px;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    margin-right: 60px;
 }
 
-.grid-container {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 50px 50px;
-    gap: 5px;
-    width: 200px;
-
+img {
+    height: 35px;
+    width: 35px;
+    margin-right: 10px;
 }
 
-.box1 {
-    background: blueviolet;
-    grid-row: 1 / 3;
-    /* Merge row 1 and 2 */
-}
-
-.box2 {
-    background: lightgreen;
-}
-
-.box3 {
-    background: orangered;
-}
-
-.grid-container1 {
+.task2-box{
     display: grid;
     grid-template-columns: repeat(3,1fr);
-    gap: 10px;
-    width:300px
+    padding-left:100px;
+    padding-right:100px;
+
+  
 }
 
-.merged {
-    background-color: lightblue;
-    grid-column: 1 / 3;
-    /* Merge columns 1 and 2 */
+.box{
+    width:250px;
+    height:250px;
+    background-color: white;
+    border-radius: 15px;
+    border: 1px solid lightgray;
+    margin-bottom: 10px;
 }
 
-.box4 {
-    background-color: lightgreen;
+.box:hover {
+    box-shadow: 1px 1px 20px lightgray;
+    transition-delay: 0.5s;
 }
 
-b{
-    text-decoration: underline;
-    font-size: 18px;
+.txt1{
+    color: #00BFFF;
+    padding-left: 10px;
+}
+
+.checkboxes{
+    padding-left:10px;
+    
+}
+
+.checklist{
+    text-decoration: line-through;
+    color: gray;
+}
+
+@media  screen and (max-width: 768px) {
+    .task-box {
+        flex-direction: column;
+        align-items: flex-start;
+        height: 1400px;
+        max-height: 1500px;
+         width: 120%; 
+        /* max-width: 300px; */
+    }
+
+    .task2-box {
+        grid-template-columns: 1fr;
+        justify-items: center;
+    }
+
+    .box
+    {
+        width: 100%; /* Make them flexible to screen */
+        max-width: 300px;
+    }
+
 }
