--- a/Assignment_CSS/style3.css
+++ b/Assignment_CSS/style3.css
@@ -1,167 +1,135 @@
-body {
-    border: 10px solid #8B0000;
-    margin: 0;
-    background-image: url(Food02.jpg);
+body{
+    background:linear-gradient(to right, sandybrown,white, green);
+    padding: 2px;
+    height: 600px;
+    width: auto;
+}
+.body{
+    background-image: url(./sky.jpg);
+    width: 100%;
+    height: 445px;
+}
+.p{
+    display: flex;
+    font-size: 35px;
+    font-weight: bold;
+    justify-content: center;
+}
+#p1{
+    color: black;
+    background-color: sandybrown;
+    margin-right: 5px;
+}
+#p2{
+    color: black;
+    background-color: white;
+    margin-right: 5px;
+}
+#p3{
+    color: black;
+    background-color: green;
+    margin-right: 5px;
+}
+.main2{
+    background-image: url(./road.jpg);
+    height: 210px;
+    width: 500%;
+    position: relative;
+    background-repeat: repeat;
     background-size: cover;
-    background-repeat: no-repeat;
+    animation-name: road;
+    animation-duration: 10s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    margin-top: 90px;
+}
+@keyframes road{
+    0%{
+        right: 0%;
+    }
+    100%{
+        right: 100%;
+    }
+}
+.city{
+    height: 265px;  
+    background-image: url(./city.png);
+    margin-bottom: 20px;
+    width: 100%; 
+    position: absolute;
+    /* background-repeat: no-repeat; */
+} 
+.car{
+    height: 145px;
+    width: 345px;
+    margin-left: 400px;
+    position: relative;
+    margin-bottom: -50px;
+    z-index: 1;
 }   
-
-.sub-heading {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding: 20px;
-}
-
-.head-1{
-    border-radius: 15px;
-    border: 2px solid red;
-    background-color: lavender;
-    margin-left: 100px;
-    margin-top: 22px;
-    width:340px;
-    height:60px;
-    font-weight:bolder;
-    font-size: 20px;
-    color: black;
+.cars{
     position: relative;
-    padding-top: 10px;
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    font-style: italic;
+    bottom: -110px;
+}
+.flag{
+    height: 60px;
+    width: 70px;
+    position: relative;
+    z-index: 1;
+    margin-bottom: -238px;
+    margin-left: 580px; 
 
 }
-
-.head-2{
-    border-radius: 15px;
-    border: 2px solid red;
-    background-color: lavender;
-    margin-left: 70px;
-    margin-top: 22px;
-    width:350px;
-    height:50px;
-    font-weight: bold;
-    color: black;
-    font-style: italic;
-    padding-top: 15px;
-    display: flex;
-    justify-content: center;   
-    display: flex;
-    font-size: 20px;
+.wheel-1{
+    height: 57px;
+    width: 57px;
+    margin-left: 150px;
+    animation-name: wheel;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    position: relative;
+    left: 283px;
+    top: 135px;
+    z-index: 1;
 }
 
-.head-3{
-    border-radius: 15px;
-    border: 2px solid red;
-    background-color:lavender;
-    margin-left: 70px;
-    margin-top: 13px;
-    width: 360px;
+@keyframes wheel{
+    0%{
+        transform: rotate(0deg);
+    }
+    100%{
+        transform: rotate(360deg);
+    }
+}
+.wheel-2{
+    height: 57px;
+    width: 57px;
+    margin-left: 150px;
+    animation-name: wheel;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    position: relative;
+    left: 285px;
+    top: 135px;
+    z-index: 1;
+}
+.sun{
     height: 80px;
-    font-weight: bold;
-    font-size: 20px;
-    color: black;
-    font-style: italic;
-    padding-top: 10px;
-    display: flex;
-    justify-content: center;   
-}
-
-.offer {
-    display: flex;
-    margin-left:70px;
-   
-   
-}
-
-.circle {
-    background-color: #FFD700;
-    border: 4px dashed #8B0000;
-    border-radius: 50%;
-    width: 350px;
-    height: 200px;
-    justify-content: center;
-    text-align: center;
-    font-weight: bold;
-    font-style: italic;
-    color: #800000;
-    font-size: 16px;
-    text-decoration: underline;
-    margin-top: 150px;  
-    padding-top: 0px;
-    margin-left:0px;
-    
-}
-
-.line{
-    padding-top:50px;
-}
-
-
-.text{
-    text-shadow: 2px 2px black;
-}  
-
-.formpage{
-    text-align: center;
-    border: 6px solid darkslateblue;
-    color: rgba(111, 0, 128, 0.532);
-    border-style: dotted;
-    font-weight:bold;
-    width: 480px;
-    margin-left:70px;
-    margin-top:30px;
-    padding-bottom: 20px;
-    background-color: burlywood;
-   
-
-}
-
-.head-4 {
-    justify-content: center;
-    display: flex;
-    border-radius: 15px;
-    border: 2px solid white;
-    background-color: orange;
-    margin-top: 20px;
-    margin: 20px auto;
-    width:220px;
-    height:50px;
-    align-items: center;
-    font-weight: bold;
-    font-style: italic;
-    color: black;
-    font-size: 20px;
+    width: 80px;
     position: relative;
+    left: 1050px;
+    animation-name: sun;
+    animation-duration: 40s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
 }
-
-.menu-box{
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    margin-top: 30px;
-    margin-bottom: 10px;
+@keyframes sun{
+    0%{
+        right: 0%;
+    }
+    100%{
+        left: -100%;
+    }
 }
-
-.top-box {
-    background-color: #FFF0F5;
-    border: 2px solid #A52A2A;
-    border-radius: 10px;
-    width: 300px;
-    padding: 10px;
-}
-
-.dishes {
-    color: #800000;
-    text-align: center;
-    font-size: 18px;
-    font-weight: bold;
-}
-
-ul li {
-    color: #333;
-}
-
-
-
