--- a/Assignment_CSS/style2.css
+++ b/Assignment_CSS/style2.css
@@ -1,35 +1,70 @@
-body{
+body {
     background-color: yellow;
     color: black;
+    display: flex;
     justify-content: center;
-    margin-left: 500px;
+    align-items: center;
+    flex-direction: column;
+    margin: 0;
+    padding: 20px;
 }
-.box{
+
+.main {
+    text-align: center;
+}
+
+.box {
     height: 100px;
     width: 100px;
     background-color: green;
-    margin: 10px;
+    margin: 10px auto;
     transition-duration: 3s;
+    list-style-type: none;
 }
-#box1:hover{
-    transition: linear;
-    width: 250px;
-    transition: 3s;
-}
-#box2:hover{
-    width: 250px;
-    height: 250px;
-    transition: width 2s, height 4s;
-}
-#box3:hover{
+
+
+#box1:hover {
     transition: linear;
     width: 250px;
     transition: 3s;
 }
 
-a{
+#box2:hover {
+    width: 250px;
+    height: 250px;
+    transition: width 2s, height 4s;
+}
+
+#box3:hover {
+    transition: linear;
+    width: 250px;
+    transition: 3s;
+}
+
+a {
     font-size: 20px;
     font-weight: bold;
-    margin-bottom: 10px;
-    margin-left: 70px;
+    display: inline-block;
+    margin: 10px;
+}
+
+@media (min-width:320px) and (max-width: 768px) {
+    .box {
+        width: 70px;
+        height: 70px;
+    }
+
+    h1 {
+        font-size: 20px;
+    }
+
+    a {
+        font-size: 16px;
+        margin: 5px;
+    }
+
+    .main {
+        width: 100%;
+        padding: 10px;
+    }
 }
