--- a/Assignment_CSS/style3.css
+++ b/Assignment_CSS/style3.css
@@ -134,7 +134,7 @@ body{
     }
 }
 
-@media screen and (max-width: 600px) {
+@media (min-width:320px) and (max-width: 768px)  {
     .p {
         flex-direction: column;
         font-size: 20px;
