--- a/Assignment_CSS/style3.css
+++ b/Assignment_CSS/style3.css
@@ -132,7 +132,9 @@ body{
     }
 }
 
-@media (min-width:320px) and (max-width: 768px)  {
+@media (min-width: 320px) and (max-width: 768px) {
+
+    /* Adjust text */
     .p {
         flex-direction: column;
         font-size: 20px;
@@ -140,13 +142,14 @@ body{
         margin-bottom: 10px;
     }
 
+    /* Adjust car */
     .car {
         width: 200px;
         height: 90px;
         margin-left: 80px;
     }
 
-
+    /* Adjust flag */
     .flag {
         width: 50px;
         height: 45px;
@@ -154,37 +157,51 @@ body{
         margin-bottom: -200px;
     }
 
+    /* Adjust wheels */
     .wheel-1,
     .wheel-2 {
         width: 35px;
         height: 35px;
-        left: 130px;
-        top: 95px;
+        top: 95px;     /* adjust based on new car size */
+        left: 130px;   /* position wheel correctly under smaller car */
     }
 
+    /* Adjust sun */
     .sun {
         width: 50px;
         height: 50px;
         left: 250px;
     }
 
+    /* Adjust road */
     .main2 {
         height: 150px;
         margin-top: 50px;
+        background-size: cover;
+        background-repeat: repeat-x;
+        animation: roadMove 10s linear infinite;
     }
 
+    /* Adjust city */
     .city {
         height: 180px;
         background-size: contain;
+        background-position: center;
+        background-repeat: no-repeat;
     }
 
+    /* Adjust background of main sky/body section */
     .body {
         height: auto;
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
     }
 
+    /* Body itself */
     body {
         height: auto;
         padding: 10px;
+        background: linear-gradient(to right, sandybrown, white, green);
     }
 }
-
