--- a/Assignment_CSS/style3.css
+++ b/Assignment_CSS/style3.css
@@ -151,10 +151,12 @@ body{
 
     /* Adjust flag */
     .flag {
-        width: 50px;
-        height: 90px;
-        margin-left: 160px;
-        margin-bottom: -200px;
+        width: 40px;           /* smaller size */
+        height: 50px;
+        margin-left: 130px;    /* reposition to match resized car */
+        margin-bottom: -180px; /* adjust vertical alignment */
+        position: relative;    /* keep relative unless changing stacking */
+        z-index: 1;
     }
 
     /* Adjust wheels */
