--- a/Assignment_CSS/style.css
+++ b/Assignment_CSS/style.css
@@ -337,4 +337,87 @@ h3 i {
     font-size: 16px;
     line-height: 1.6;
   }
+
+@media (max-width: 768px) {
+  nav {
+    flex-direction: column;
+    height: auto;
+    padding: 10px 0;
+  }
+
+  .nav-links {
+    flex-direction: column;
+    align-items: center;
+    margin: 0;
+    gap: 10px;
+  }
+
+  .main-page {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .page-content h1,
+  .title,
+  .description {
+    margin: 20px;
+    font-size: 20px;
+  }
+
+  .btn {
+    margin: 15px auto;
+  }
+
+  .img-photo {
+    margin: 30px auto;
+    width: 200px;
+    height: 200px;
+  }
+
+  .img-photo img {
+    width: 100%;
+    height: auto;
+  }
+
+  #about {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .about-content {
+    margin-left: 0;
+    justify-content: center;
+    text-align: center;
+  }
+
+  .about-text {
+    margin-left: 0;
+  }
+
+  .profile-photo img {
+    margin-top: 40px;
+    width: 180px;
+    height: 180px;
+  }
+
+  .project-container {
+    margin-left: 0;
+    margin-top: 50px;
+  }
+
+  .skills-grid {
+    grid-template-columns: 1fr;
+  }
+
+  .heading {
+    font-size: 1.2rem;
+    padding-left: 10px;
+  }
+
+  .style-fonts {
+    justify-content: center;
+    margin: 15px 0;
+  }
+}
+
   
