--- a/Assignment_CSS/style.css
+++ b/Assignment_CSS/style.css
@@ -342,13 +342,12 @@ h3 i {
   nav {
     flex-direction: column;
     height: auto;
-    padding: 10px 0;
   }
 
   .nav-links {
     flex-direction: column;
     align-items: center;
-    margin: 0;
+    margin-right: 0;
     gap: 10px;
   }
 
@@ -359,65 +358,40 @@ h3 i {
 
   .page-content h1,
   .title,
-  .description {
-    margin: 20px;
-    font-size: 20px;
-  }
-
+  .description,
   .btn {
-    margin: 15px auto;
+    margin-left: 0;
+    margin-top: 20px;
   }
 
   .img-photo {
-    margin: 30px auto;
-    width: 200px;
-    height: 200px;
-  }
-
-  .img-photo img {
-    width: 100%;
-    height: auto;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   #about {
     flex-direction: column;
     align-items: center;
+    text-align: center;
   }
 
   .about-content {
+    flex-direction: column;
+    align-items: center;
     margin-left: 0;
-    justify-content: center;
-    text-align: center;
   }
 
   .about-text {
     margin-left: 0;
+    padding: 0 10px;
   }
 
   .profile-photo img {
-    margin-top: 40px;
-    width: 180px;
-    height: 180px;
+    margin-top: 30px;
   }
 
   .project-container {
     margin-left: 0;
     margin-top: 50px;
   }
-
-  .skills-grid {
-    grid-template-columns: 1fr;
-  }
-
-  .heading {
-    font-size: 1.2rem;
-    padding-left: 10px;
-  }
-
-  .style-fonts {
-    justify-content: center;
-    margin: 15px 0;
-  }
 }
-
-  
