--- a/Assignment_CSS/style.css
+++ b/Assignment_CSS/style.css
@@ -125,28 +125,35 @@ nav {
     justify-content: space-between;
 }
 
+
+.scn-box {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  /* optionally add some padding or margin */
+}
+
 .img-box {
-    padding: 5px;
+  /* optional styles */
 }
 
 .img-photo {
-    width: 300px;
-    height: 350px;
-    border-radius: 50%;
-    border: 2px solid black;
-    overflow: hidden;
-    /* Hides overflow outside the circle */
-    display: flex;
-    margin-top: 130px;
-    margin-left: 100px;
-
+  width: 300px;
+  height: 350px;
+  border-radius: 50%;
+  border: 2px solid black;
+  overflow: hidden;
+  display: flex;
+  margin-top: 130px;
+  margin-left: 0; /* remove margin-left */
 }
 
 .img-photo img {
-    width: 200%;
-    height: 100%;
-
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
+
 
 section {
     min-height: 100vh; /* or just remove height */
@@ -343,6 +350,12 @@ h3 i {
 
   
    @media (max-width: 768px) {
+
+  .img-photo {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
+  }
   section {
     height: auto !important;  /* Override fixed height */
     flex-direction: column !important;
